objects/amc__Learning__c.object
<CustomObject>
    <fields>
        <fullName>amc__Category__c</fullName>
        <inlineHelpText>Identifies the Categories this Learning relates to</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Scoping</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Learning_Notes__c</fullName>
        <inlineHelpText>Detailed notes relating to the Learning</inlineHelpText>
        <label>Learning Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>amc__Learning__c</fullName>
        <inlineHelpText>Identifies the name of the Learning</inlineHelpText>
        <label>Learning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Opinion__c</fullName>
        <inlineHelpText>Identifies the Opinion of this Learning</inlineHelpText>
        <label>Opinion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Worked Well</fullName>
                </value>
                <value>
                    <fullName>Needs Improvement</fullName>
                </value>
                <value>
                    <fullName>Try Next</fullName>
                </value>
                <value>
                    <fullName>Puzzles Us</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Role record of the person that identified this Learning</inlineHelpText>
        <label>Reported By</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Learnings</relationshipLabel>
        <relationshipName>Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Retrospective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Retrospective this Learning relates to</inlineHelpText>
        <label>Retrospective</label>
        <referenceTo>amc__Retrospective__c</referenceTo>
        <relationshipLabel>Learnings</relationshipLabel>
        <relationshipName>Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning</label>
    <listViews>
        <fullName>amc__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LNG:{00000000}</displayFormat>
        <label>Learning ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>